// --- NHÓM 1: QUẢN LÝ TÀI KHOẢN ---
Table Account {
  id integer [primary key, increment]
  email varchar [unique, not null]
  password varchar [not null]
  role varchar 
  is_active bit [default: 1]
  created_at datetime2 [default: `now()`]
  updated_at datetime2 [default: `now()`]
}

// --- NHÓM 2: CHI TIẾT NGƯỜI DÙNG ---
Table Admin {
  id integer [primary key, increment]
  id_account integer [unique, not null]
  name nvarchar
}

Table Doctor {
  id integer [primary key, increment]
  id_account integer [unique, not null]
  name nvarchar
  // ERD của bạn không hiện specialization nhưng có thể để dự phòng
}

Table Customers {
  id integer [primary key, increment]
  cus_name nvarchar [not null]
  sdt varchar [not null]
  email varchar 
}

// --- NHÓM 3: THỰC THỂ ---
Table Pets {
  id integer [primary key, increment]
  id_owner integer [not null]
  name nvarchar [not null]
  species nvarchar
  breed nvarchar
  birth_month tinyint
  birth_year smallint
}

// --- NHÓM 4: DANH MỤC ---
Table Services {
  id integer [primary key, increment]
  service_name nvarchar [not null]
  option_name nvarchar
  price decimal(18,2)
}

Table Medicines {
  id integer [primary key, increment]
  name nvarchar [not null]
  category nvarchar
  stock_quantity integer [default: 0]
  cost_price decimal(18,2)
  selling_price decimal(18,2)
  unit nvarchar 
}

// --- NHÓM 5: GIAO DỊCH & VẬN HÀNH ---
Table Schedule {
  id integer [primary key, increment]
  id_doc integer [not null]
  id_cus integer [not null]
  id_pet integer [not null]
  time datetime2 [not null]
  status nvarchar [default: 'PENDING']
  created_at datetime2 [default: `now()`]
  service_group nvarchar // Thêm theo ảnh SSMS của bạn
  customer_note nvarchar // Thêm theo ảnh SSMS của bạn
}

Table MedicalRecords {
  id integer [primary key, increment]
  id_schedule integer [unique, not null]
  symptoms nvarchar
  diagnosis nvarchar
  notes nvarchar 
  created_at datetime2 [default: `now()`]
}

// Bảng trung gian chi tiết dịch vụ (Theo ERD và SSMS mới nhất)
Table ServiceDetails {
  id integer [primary key, increment]
  id_medical_record integer [not null]
  id_service integer [not null]
  price_at_time decimal(18,2)
}

Table Prescriptions {
  id integer [primary key, increment]
  id_medical_record integer [not null]
  id_medicine integer [not null]
  quantity integer [not null]
  price_at_sale decimal(18,2)
}

Table Doctor_Leave {
  LeaveID integer [primary key, increment]
  DoctorID integer [not null]
  LeaveDate date [not null]
  Reason nvarchar
  Status nvarchar
  AdminNote nvarchar
  CreatedAt datetime2 [default: `now()`]
}

// --- ĐỊNH NGHĨA MỐI QUAN HỆ (RELATIONSHIPS) ---

// Quan hệ 1-1
Ref: Account.id - Admin.id_account
Ref: Account.id - Doctor.id_account
Ref: Schedule.id - MedicalRecords.id_schedule

// Quan hệ 1-N
Ref: Customers.id < Pets.id_owner
Ref: Customers.id < Schedule.id_cus
Ref: Doctor.id < Schedule.id_doc
Ref: Pets.id < Schedule.id_pet

// Luồng Bệnh án - Dịch vụ - Thuốc
Ref: MedicalRecords.id < ServiceDetails.id_medical_record
Ref: Services.id < ServiceDetails.id_service
Ref: MedicalRecords.id < Prescriptions.id_medical_record
Ref: Medicines.id < Prescriptions.id_medicine

// Quản lý nghỉ phép
Ref: Doctor.id < Doctor_Leave.DoctorID